--- a/src/components/appShop.css
+++ b/src/components/appShop.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 .strip{
     background-color: rgb(1, 83, 1) ;
     
@@ -15,6 +19,7 @@
 
 .nav-left img{
    max-height: 80px;
+   border-radius: 100% 60%;
 }
    
 
