--- a/src/components/appShop.css
+++ b/src/components/appShop.css
@@ -17,6 +17,7 @@ header{
 .logo img{
     height: 100px;
     border-radius: 100% 50%;
+    padding: 5px;
 }
 
 header .container{
@@ -71,4 +72,14 @@ header nav a:hover{
 
 .right-side-sec1 img{
  padding-left: 20px;
+}
+
+/* section-2 */
+
+
+.sec-2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 300px;
 }
